[Issue 3115] Support mining beneficiary transitions (#3505)
Signed-off-by: Meredith Baxter <meredith.baxter@palm.io>
Signed-off-by: Frank Li <b439988l@gmail.com>